--- a/tsconfig.json
+++ b/tsconfig.json
@@ -112,5 +112,5 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*./tsx", "./src/**/*./ts"]
+  "include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
