--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
+    "pino": "^8.16.0",
+    "pino-pretty": "^10.2.3",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.17"
   }
