--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "pino": "^8.16.0",
     "pino-pretty": "^10.2.3",
