--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
@@ -30,6 +31,7 @@
     "pino": "^8.16.0",
     "pino-pretty": "^10.2.3",
     "ts-node": "^10.9.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^10.0.0"
   }
 }
